--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/faviconStarLinARG.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -33,6 +33,7 @@
             <div class="col-lg-3 bg-secondary d-none d-lg-block">
                 <a href="" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
                     <h1 class="m-0 display-3 text-primary">Klean</h1>
+                    <img src="/img/logoStarLinkARG.png" alt="">
                 </a>
             </div>
             <div class="col-lg-9">
@@ -108,32 +109,32 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="img-fluid" src="img/carousel-1.jpg" alt="Image">
+                    <img class="img-fluid" src="https://api.starlink.com/public-files/home_hero_d.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
-                            <h5 class="text-primary text-uppercase mb-md-3">Cleaning Services</h5>
-                            <h1 class="display-3 text-white mb-md-4">Best Quality Solution In Cleaning</h1>
-                            <a href="" class="btn btn-primary">Get A Quote</a>
+                            <h5 class="text-primary text-uppercase mb-md-3">Conexión Rural</h5>
+                            <h1 class="display-3 text-white mb-md-4">INTERNET DE ALTA VELOCIDAD</h1>
+                            <a href="" class="btn btn-primary">Contactar Asesor/a</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="img-fluid" src="img/carousel-2.jpg" alt="Image">
+                    <img class="img-fluid" src="https://images.interestingengineering.com/1200x675/img/iea/Azwk859KOb/starlink-rv.jpeg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
-                            <h5 class="text-primary text-uppercase mb-md-3">Cleaning Services</h5>
-                            <h1 class="display-3 text-white mb-md-4">Highly Professional Cleaning Services</h1>
-                            <a href="" class="btn btn-primary">Get A Quote</a>
+                            <h5 class="text-primary text-uppercase mb-md-3">ITINERANTE</h5>
+                            <h1 class="display-3 text-white mb-md-4">Conexión en Movimiento</h1>
+                            <a href="" class="btn btn-primary">Información</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="img-fluid" src="img/carousel-3.jpg" alt="Image">
+                    <img class="img-fluid" src="img/barco.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
-                            <h5 class="text-primary text-uppercase mb-md-3">Cleaning Services</h5>
-                            <h1 class="display-3 text-white mb-md-4">Experienced & Expert Cleaners</h1>
-                            <a href="" class="btn btn-primary">Get A Quote</a>
+                            <h5 class="text-primary text-uppercase mb-md-3">BARCOS Y BOTES</h5>
+                            <h1 class="display-3 text-white mb-md-4">Conexión en el Agua.</h1>
+                            <a href="" class="btn btn-primary">Información</a>
                         </div>
                     </div>
                 </div>
